[BUGFIX] Improve usability of inline header
The header should break into next line if it is too long.

Resolves: #71881
Releases: master
Reviewed-on: https://review.typo3.org/45054
Tested-by: Daniel Maier <dani-maier@gmx.de>
Tested-by: Frank Nägler <frank.naegler@typo3.org>

--- a/typo3/sysext/t3skin/Resources/Public/Css/backend.css
+++ b/typo3/sysext/t3skin/Resources/Public/Css/backend.css
@@ -12391,6 +12391,7 @@ select.icon-select option {
 .form-irre-header-body {
   width: 100%;
   font-weight: normal;
+  white-space: normal;
 }
 .form-irre-header-body dl {
   margin-bottom: 0;
